fix css property, text out of box when city with thousands of streets

--- a/inst/app/www/streetnamer_dt.css
+++ b/inst/app/www/streetnamer_dt.css
@@ -9,5 +9,5 @@
 }
 
 .pagination {
-  text-size: 11px;
+  font-size: 11px;
 }
